--- a/Muddle.Web/Pages/Map.cshtml
+++ b/Muddle.Web/Pages/Map.cshtml
@@ -7,66 +7,46 @@
 }
 
 <style>
-    img.icon
-{
+    img.icon {
         height: 64px;
         width: 64px;
-        }
+    }
 </style>
 
 <div class="text-center">
-    <h1 class="display-4">Map Example</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Map Examples</h1>
+    <p>Learn about <a href="https://muddle.dev/">building MUD games with Muddle</a>.</p>
 </div>
 
-<table class="m-0 p-0">
-    <tr>
-        <th class="m-0 p-0">#</th>
-        @for (var x = Model.Map.MinX; x <= Model.Map.MaxX; x++)
-        {
-            <th class="m-0 p-0 text-center">
-                @x
-            </th>
-        }
-    </tr>
-    @for (var y = Model.Map.MinY; y <= Model.Map.MaxY; y++)
-    {
-        <tr>
-            <th class="m-0 p-0 align-middle">
-                @y
-            </th>
-            @for (var x = Model.Map.MinX; x <= Model.Map.MaxX; x++)
-            {
-                var point = Model.Map.GetPoint(x, y);
-        <td class="m-0 p-0">
-            @if (point.HasPath)
-            {
-                switch (point.PathOrientation)
-                {
-                    case Orientations.Vertical:
-                        <img src="img/iconsets/default/path-vertical.png" class="icon"/>
-                        break;
+<h1>Fork Map Example</h1>
 
-                    case Orientations.Horizontal:
-                        <img src="img/iconsets/default/path-horizontal.png" class="icon"/>
-                        break;
+<render-map Map="@Model.ForkMap"></render-map>
 
-                    case Orientations.Both:
-                        <img src="img/iconsets/default/path-cross.png" class="icon"/>
-                        break;
+<pre><code>
+var map = new MapBuilder(10, 5)
+    .AddPath(0, 2, 10, Directions.East)
+    .AddPath(5, 0, 5, Directions.South)
+    .AddPath(5, 0, 5, Directions.East)
+    .AddPath(9, 4, 5, Directions.West)
+    .AddPath(0, 3, 3, Directions.North)
+    ;
+</code></pre>
 
-                    default:
-                        @point.PathOrientation.CharRepresentation()
-                        break;
-                }
+<h1>CM Map Example</h1>
 
-            }
-            else
-            {
-                <img src="img/iconsets/default/default.png" class="icon" />
-            }
-        </td>
-            }
-        </tr>
-    }
-</table>
+<render-map Map="@Model.CMMap"></render-map>
+
+<pre><code>
+var map = new MapBuilder(13, 7)
+    .AddPath(1, 1, 3, Directions.East)
+    .AddPath(1, 1, 5, Directions.South)
+    .AddPath(1, 5, 6, Directions.East)
+    .AddPath(6, 5, 5, Directions.North)
+    .AddPath(6, 1, 3, Directions.East)
+    .AddPath(8, 1, 3, Directions.South)
+    .AddPath(8, 3, 3, Directions.East)
+    .AddPath(10, 3, 3, Directions.North)
+    .AddPath(10, 1, 3, Directions.East)
+    .AddPath(12, 1, 5, Directions.South)
+    ;
+</code></pre>
