Tidy up website layout and maps page

--- a/Muddle.Web/Pages/Index.cshtml
+++ b/Muddle.Web/Pages/Index.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
 
-<h1><a href="/Map">Map</a></h1>
+<h1 class="display-4">Welcome to Muddle</h1>
+<p>Multi User Dimension Development Learning Environment (MUDDLE) is a multiplayer game engine designed to help (primarily) school children learn how to code in various languages and using various techniques.</p>
+
+
+<h2><a href="/Map">Maps</a> - An overview of how to create a map</h2>
