--- a/Muddle.Web/Pages/Map.cshtml
+++ b/Muddle.Web/Pages/Map.cshtml
@@ -13,12 +13,14 @@
     }
 </style>
 
-<div class="text-center">
-    <h1 class="display-4">Map Examples</h1>
-    <p>Learn about <a href="https://muddle.dev/">building MUD games with Muddle</a>.</p>
-</div>
+
+<h1 class="display-4">Map Examples</h1>
+<p>Learn about <a href="https://muddle.dev/">building MUD games with Muddle</a>.</p>
+
 
 <h1>Fork Map Example</h1>
+
+<p>A simple map shown like a fork</p>
 
 <render-map Map="@Model.ForkMap"></render-map>
 
@@ -33,6 +35,8 @@ var map = new MapBuilder(10, 5)
 </code></pre>
 
 <h1>CM Map Example</h1>
+
+<p>A map with paths that look like a letter C followed by a letter M</p>
 
 <render-map Map="@Model.CMMap"></render-map>
 
