Minor UI tweaks

--- a/Muddle.Web/Pages/Index.cshtml
+++ b/Muddle.Web/Pages/Index.cshtml
@@ -8,5 +8,8 @@
 <h1 class="display-4">Welcome to Muddle</h1>
 <p>Multi User Dimension Development Learning Environment (MUDDLE) is a multiplayer game engine designed to help (primarily) school children learn how to code in various languages and using various techniques.</p>
 
+<div class="alert alert-warning">
+    We are presently in the early stages of setting up this website, so please bear with us whilst we launch.
+</div>
 
 <h2><a href="/Map">Maps</a> - An overview of how to create a map</h2>
