--- a/Muddle.Web/Pages/Map.cshtml
+++ b/Muddle.Web/Pages/Map.cshtml
@@ -3,19 +3,19 @@
 @using Muddle.Domain.Models
 @model MapModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Maps page";
 }
 
 <style>
     img.icon {
-        height: 64px;
-        width: 64px;
+        height: 48px;
+        width: 48px;
     }
 </style>
 
 
 <h1 class="display-4">Map Examples</h1>
-<p>Learn about <a href="https://muddle.dev/">building MUD games with Muddle</a>.</p>
+<p>This page shows examples of code that can be used to generate maps and a render of how those maps look</p>
 
 
 <h1>Fork Map Example</h1>
