--- a/Muddle.Web/Pages/Map.cshtml
+++ b/Muddle.Web/Pages/Map.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@using Muddle.Domain.Helpers
 @using Muddle.Domain.Models
 @model MapModel
 @{
@@ -17,6 +16,35 @@
 <h1 class="display-4">Map Examples</h1>
 <p>This page shows examples of code that can be used to generate maps and a render of how those maps look</p>
 
+<h1>Empty Map</h1>
+<p>A basic 9x5 map</p>
+<render-map Map="@(new MapBuilder(9, 5).Build())"></render-map>
+<pre><code>
+var map = new MapBuilder(9, 5)
+    .Build();
+</code></pre>
+
+<h1>Single Path</h1>
+<p>A single path on an 9x5 map, with the path starting at point 1,2 and travelling East for 7 blocks</p>
+<render-map Map="@(new MapBuilder(9, 5).AddPath(1, 2, 7, Directions.East).Build())"></render-map>
+<pre><code>
+var map = new MapBuilder(9, 5)
+    .AddPath(1, 2, 7, Directions.East)
+    .Build();
+</code></pre>
+
+<h1>Crossroad</h1>
+<p>Continuing from the first map, we add a second path starting at point 4,1 and travelling South for 3 blocks</p>
+<render-map Map="@(new MapBuilder(9, 5)
+                     .AddPath(1, 2, 7, Directions.East)
+                     .AddPath(4, 1, 3, Directions.South)
+                     .Build())"></render-map>
+<pre><code>
+var map = new MapBuilder(9, 5)
+    .AddPath(1, 2, 7, Directions.East)
+    .AddPath(4, 1, 3, Directions.South)
+    .Build();
+</code></pre>
 
 <h1>Fork Map Example</h1>
 
@@ -31,7 +59,7 @@ var map = new MapBuilder(10, 5)
     .AddPath(5, 0, 5, Directions.East)
     .AddPath(9, 4, 5, Directions.West)
     .AddPath(0, 3, 3, Directions.North)
-    ;
+    .Build();
 </code></pre>
 
 <h1>CM Map Example</h1>
@@ -52,5 +80,5 @@ var map = new MapBuilder(13, 7)
     .AddPath(10, 3, 3, Directions.North)
     .AddPath(10, 1, 3, Directions.East)
     .AddPath(12, 1, 5, Directions.South)
-    ;
+    .Build();
 </code></pre>
