Update urls and add version badge

--- a/Muddle.Web/Pages/Index.cshtml
+++ b/Muddle.Web/Pages/Index.cshtml
@@ -9,7 +9,7 @@
 <h1 class="display-4">Welcome to Muddle</h1>
 <div>
     <img src="https://github.com/cmorgan091/Muddle/workflows/.NET%20Core/badge.svg" />
-    <img src="https://img.shields.io/badge/version-@(Assembly.GetEntryAssembly().GetName().Version)-green"/>
+    <img src="https://img.shields.io/badge/version-@(Assembly.GetEntryAssembly().GetName().Version.ToString(3))-green"/>
 </div>
 <p>Multi User Dimension Development Learning Environment (MUDDLE) is a multiplayer game engine designed to help (primarily) school children learn how to code in various languages and using various techniques.</p>
 
@@ -29,6 +29,6 @@
     </ul>
 </p>
 
-
+<p>The source code for this open source and available at <a href="https://github.com/cmorgan091/Muddle/">https://github.com/cmorgan091/Muddle/</a></p>
 
 <h2><a href="/Map">Maps</a> - An overview of how to create a map</h2>
