--- a/Muddle.Web/Pages/Index.cshtml
+++ b/Muddle.Web/Pages/Index.cshtml
@@ -8,7 +8,8 @@
 
 <h1 class="display-4">Welcome to Muddle</h1>
 <div>
-    <img src="https://github.com/cmorgan091/Muddle/workflows/.NET%20Core/badge.svg" />
+    <img src="https://github.com/cmorgan091/Muddle/workflows/CI%20CD%20to%20Azure/badge.svg" />
+    <img src="https://img.shields.io/github/last-commit/cmorgan091/muddle.svg?maxAge=3600"/>
     <img src="https://img.shields.io/badge/version-@(Assembly.GetEntryAssembly().GetName().Version.ToString(3))-green"/>
 </div>
 <p>Multi User Dimension Development Learning Environment (MUDDLE) is a multiplayer game engine designed to help (primarily) school children learn how to code in various languages and using various techniques.</p>
