--- a/Muddle.Web/Pages/Map.cshtml
+++ b/Muddle.Web/Pages/Map.cshtml
@@ -113,7 +113,7 @@ var map = new MapBuilder(9, 5)
 var map = new MapBuilder(9, 5)
     .AddBackgroundItem(1, 1)
     .AddBackgroundItem(3, 1)
-    .AddPath(0,2,7,Directions.East)
+    .AddPath(0, 2, 7, Directions.East)
     .AddBackgroundItem(2, 3)
     .AddBackgroundItem(5, 3)
     .Build()
