Update layout and index page

--- a/Muddle.Web/Pages/Index.cshtml
+++ b/Muddle.Web/Pages/Index.cshtml
@@ -5,19 +5,33 @@
     ViewData["Title"] = "Home page";
 }
 
+<div class="container px-4 px-md-3" style="padding-top: 3rem;padding-bottom: 3rem;">
+    <div class="row align-items-lg-center">
+        <div class="col-8 mx-auto col-md-4 order-md-2 col-lg-5">
+            Add image here with logo
+        </div>
+        <div class="col-md-8 order-md-1 col-lg-7 text-center text-md-left">
+            <h1 class="mb-3" style="font-weight: 500; font-size: 3.5rem;">Build multi-player MUD games with Muddle</h1>
+            <p class="lead mb-4">
+                Quickly design and build web based MUD games using an open source framework, designed to help those new to programming how to learn by doing
+            </p>
 
-<h1 class="display-4">Welcome to Muddle</h1>
-<div>
-    <img src="https://github.com/cmorgan091/Muddle/workflows/CI%20CD%20to%20Azure/badge.svg" />
-    <img src="https://img.shields.io/github/last-commit/cmorgan091/muddle.svg?maxAge=3600"/>
-    <img src="https://img.shields.io/badge/version-@(Assembly.GetEntryAssembly().GetName().Version.ToString(3))-green"/>
-    <img src="https://img.shields.io/github/commit-activity/w/cmorgan091/muddle"/>
+            <div class="d-flex flex-column flex-md-row">
+                <a href="/Map" class="btn btn-lg btn-bd-primary mb-3 mr-md-3">Get started</a>
+                @*<a href="#" class="btn btn-lg btn-outline-secondary mb-3">Download</a>*@
+            </div>
+            <p class="text-muted mb-0">
+                Currently <img src="https://img.shields.io/badge/version-@(Assembly.GetEntryAssembly().GetName().Version.ToString(3))-green" />
+            </p>
+        </div>
+    </div>
+    
 </div>
+
+
+<h2>What is Muddle?</h2>
+
 <p>Multi User Dimension Development Learning Environment (MUDDLE) is a multiplayer game engine designed to help (primarily) school children learn how to code in various languages and using various techniques.</p>
-
-<div class="alert alert-warning">
-    We are presently in the early stages of setting up this website, so please bear with us whilst we launch.
-</div>
 
 <p>
     Key languages and concepts are:
@@ -33,4 +47,15 @@
 
 <p>The source code for this open source and available at <a href="https://github.com/cmorgan091/Muddle/">https://github.com/cmorgan091/Muddle/</a></p>
 
-<h2><a href="/Map">Maps</a> - An overview of how to create a map</h2>
+<h2>Key Concepts</h2>
+
+<ul>
+    <li><a href="/Map">Maps</a> - An overview of how to create a map</li>
+</ul>
+
+<div class="align-content-center">
+    <img src="https://github.com/cmorgan091/Muddle/workflows/CI%20CD%20to%20Azure/badge.svg" />
+    <img src="https://img.shields.io/github/last-commit/cmorgan091/muddle.svg?maxAge=3600" />
+    <img src="https://img.shields.io/badge/version-@(Assembly.GetEntryAssembly().GetName().Version.ToString(3))-green" />
+    <img src="https://img.shields.io/github/commit-activity/w/cmorgan091/muddle" />
+</div>
