--- a/Muddle.Web/Pages/Shared/_Layout.cshtml
+++ b/Muddle.Web/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,11 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark primary-color">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Muddle.dev</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                    <img src="img/logo-border.svg" height="40" width="40" style="margin-right: 10px;"/>
+
+                    Muddle.dev
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
