Update index page and version number

--- a/Muddle.Web/Pages/Index.cshtml
+++ b/Muddle.Web/Pages/Index.cshtml
@@ -53,9 +53,15 @@
     <li><a href="/Map">Maps</a> - An overview of how to create a map</li>
 </ul>
 
-<div class="align-content-center">
+<h2>Development Statistics</h2>
+
+<div class="text-center">
     <img src="https://github.com/cmorgan091/Muddle/workflows/CI%20CD%20to%20Azure/badge.svg" />
     <img src="https://img.shields.io/github/last-commit/cmorgan091/muddle.svg?maxAge=3600" />
     <img src="https://img.shields.io/badge/version-@(Assembly.GetEntryAssembly().GetName().Version.ToString(3))-green" />
     <img src="https://img.shields.io/github/commit-activity/w/cmorgan091/muddle" />
+    <img src="https://buildstats.info/nuget/Muddle"/>
+</div>
+<div class="text-center">
+    <img src="https://buildstats.info/github/chart/cmorgan091/muddle"/>
 </div>
