--- a/Muddle.Web/Pages/_ViewImports.cshtml
+++ b/Muddle.Web/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Muddle.Web
 @namespace Muddle.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Muddle.AspNetCore
+@addTagHelper *, Muddle
 @addTagHelper *, Muddle.Web
