Use separate css file and embed it

--- a/Muddle.Web/Pages/Shared/_Layout.cshtml
+++ b/Muddle.Web/Pages/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <title>@ViewData["Title"] - Muddle</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/prism.css" />
+    <link rel="stylesheet" href="~/muddle/css/muddle.css" />
 </head>
 <body>
     <header>
