--- a/Muddle.Web/Pages/Map.cshtml
+++ b/Muddle.Web/Pages/Map.cshtml
@@ -20,21 +20,21 @@
 
 <h2>Single Path</h2>
 <p>A single path on an 9x5 map, with the path starting at point 1,2 and travelling East for 7 blocks</p>
-<render-map Map="@(new MapBuilder(9, 5).AddPath(1, 2, 7, Directions.East).Build())" show-coordinates="true"></render-map>
+<render-map Map="@(new MapBuilder(9, 5).AddPath(1, 2, Directions.East, 7).Build())" show-coordinates="true"></render-map>
 <pre><code class="language-csharp">var map = new MapBuilder(9, 5)
-    .AddPath(1, 2, 7, Directions.East)
+    .AddPath(1, 2, Directions.East, 7)
     .Build();
 </code></pre>
 
 <h2>Crossroad</h2>
 <p>Continuing from the first map, we add a second path starting at point 4,1 and travelling South for 3 blocks</p>
 <render-map Map="@(new MapBuilder(9, 5)
-                     .AddPath(1, 2, 7, Directions.East)
-                     .AddPath(4, 1, 3, Directions.South)
+                     .AddPath(1, 2, Directions.East, 7)
+                     .AddPath(4, 1, Directions.South, 3)
                      .Build())" show-coordinates="true"></render-map>
 <pre><code class="language-csharp">var map = new MapBuilder(9, 5)
-    .AddPath(1, 2, 7, Directions.East)
-    .AddPath(4, 1, 3, Directions.South)
+    .AddPath(1, 2, Directions.East, 7)
+    .AddPath(4, 1, Directions.South, 3)
     .Build();
 </code></pre>
 
@@ -42,14 +42,20 @@
 
 <p>A simple map shown like a fork</p>
 
-<render-map Map="@Model.ForkMap" show-coordinates="true"></render-map>
+<render-map Map="new MapBuilder(10, 5)
+                    .AddPath(0, 2, Directions.East, 10)
+                    .AddPath(5, 0, Directions.South, 5)
+                    .AddPath(5, 0, Directions.East, 5)
+                    .AddPath(9, 4, Directions.West, 5)
+                    .AddPath(0, 3, Directions.North, 3)
+            .Build()" show-coordinates="true"></render-map>
 
-<pre><code class="language-csharp">var map = new MapBuilder(10, 5)
-    .AddPath(0, 2, 10, Directions.East)
-    .AddPath(5, 0, 5, Directions.South)
-    .AddPath(5, 0, 5, Directions.East)
-    .AddPath(9, 4, 5, Directions.West)
-    .AddPath(0, 3, 3, Directions.North)
+<pre><code class="language-csharp">var map = var map = new MapBuilder(10, 5)
+    .AddPath(0, 2, Directions.East, 10)
+    .AddPath(5, 0, Directions.South, 5)
+    .AddPath(5, 0, Directions.East, 5)
+    .AddPath(9, 4, Directions.West, 5)
+    .AddPath(0, 3, Directions.North, 3)
     .Build();
 </code></pre>
 
@@ -57,19 +63,30 @@
 
 <p>A map with paths that look like a letter C followed by a letter M</p>
 
-<render-map Map="@Model.CMMap" show-coordinates="true"></render-map>
+<render-map Map="new MapBuilder(13, 7)
+                    .AddPath(1, 1, Directions.East, 3)
+                    .AddPath(1, 1, Directions.South, 5)
+                    .AddPath(1, 5, Directions.East, 6)
+                    .AddPath(6, 5, Directions.North, 5)
+                    .AddPath(6, 1, Directions.East, 3)
+                    .AddPath(8, 1, Directions.South, 3)
+                    .AddPath(8, 3, Directions.East, 3)
+                    .AddPath(10, 3, Directions.North, 3)
+                    .AddPath(10, 1, Directions.East, 3)
+                    .AddPath(12, 1, Directions.South, 5)
+                    .Build()" show-coordinates="true"></render-map>
 
-<pre><code class="language-csharp">var map = new MapBuilder(13, 7)
-    .AddPath(1, 1, 3, Directions.East)
-    .AddPath(1, 1, 5, Directions.South)
-    .AddPath(1, 5, 6, Directions.East)
-    .AddPath(6, 5, 5, Directions.North)
-    .AddPath(6, 1, 3, Directions.East)
-    .AddPath(8, 1, 3, Directions.South)
-    .AddPath(8, 3, 3, Directions.East)
-    .AddPath(10, 3, 3, Directions.North)
-    .AddPath(10, 1, 3, Directions.East)
-    .AddPath(12, 1, 5, Directions.South)
+<pre><code class="language-csharp">new MapBuilder(13, 7)
+    .AddPath(1, 1, Directions.East, 3)
+    .AddPath(1, 1, Directions.South, 5)
+    .AddPath(1, 5, Directions.East, 6)
+    .AddPath(6, 5, Directions.North, 5)
+    .AddPath(6, 1, Directions.East, 3)
+    .AddPath(8, 1, Directions.South, 3)
+    .AddPath(8, 3, Directions.East, 3)
+    .AddPath(10, 3, Directions.North, 3)
+    .AddPath(10, 1, Directions.East, 3)
+    .AddPath(12, 1, Directions.South, 5)
     .Build();
 </code></pre>
 
@@ -91,15 +108,15 @@
 <render-map Map="@(new MapBuilder(9, 5)
                      .AddBackgroundItem(1, 1)
                      .AddBackgroundItem(3, 1)
-                     .AddPath(0,2,7,Directions.East)
+                     .AddPath(0,2,Directions.East, 7)
                      .AddBackgroundItem(2, 3)
                      .AddBackgroundItem(5, 3)
                      .Build())" show-coordinates="true"></render-map>
 <pre><code class="language-csharp">var map = new MapBuilder(9, 5)
     .AddBackgroundItem(1, 1)
     .AddBackgroundItem(3, 1)
-    .AddPath(0, 2, 7, Directions.East)
+    .AddPath(0,2,Directions.East, 7)
     .AddBackgroundItem(2, 3)
     .AddBackgroundItem(5, 3)
-    .Build()
+    .Build());
 </code></pre>
