Css for mapview

--- a/Muddle.AspNetCore/resources/muddle/css/muddle.css
+++ b/Muddle.AspNetCore/resources/muddle/css/muddle.css
@@ -6,3 +6,8 @@ table.muddle-map > tbody > tr > td > img.icon {
     height: 32px;
     width: 32px;
 }
+
+div.muddle-map-view {
+    overflow: scroll;
+    max-height: 400px;
+}
