--- a/Muddle.Web/Pages/MapView.cshtml
+++ b/Muddle.Web/Pages/MapView.cshtml
@@ -8,6 +8,8 @@
 <h1 class="display-4">Map Viewer</h1>
 <p>This page is used for the development of the Map Viewer</p>
 
-<h1>Empty Map</h1>
-<p>A basic 9x5 map</p>
-<render-map Map="@(new MapBuilder(100, 100).Build())" show-coordinates="true"></render-map>
+<div class="muddle-map-view">
+
+    <render-map Map="@(new MapBuilder(50, 20).Build())" show-coordinates="true"></render-map>
+
+</div>
