--- a/Muddle.Web/Pages/Shared/_Layout.cshtml
+++ b/Muddle.Web/Pages/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Map">Maps</a>
                         </li>
-                        @*<li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/MapView">Map Viewer</a>
+                        </li>
                     </ul>
                 </div>
             </div>
