--- a/Muddle.Web/Views/Shared/_Layout.cshtml
+++ b/Muddle.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark primary-color">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">
-                    <img src="img/logo-border.svg" height="40" width="40" style="margin-right: 10px;" />
+                    <img src="~/img/logo-border.svg" height="40" width="40" style="margin-right: 10px;" />
 
                     Muddle.dev
                 </a>
@@ -38,6 +38,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/MapView">Map Viewer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/GamesMaster">Games Master</a>
                         </li>
                     </ul>
                 </div>
