Add player onto map display when in game

--- a/Muddle.AspNetCore/resources/muddle/css/muddle.css
+++ b/Muddle.AspNetCore/resources/muddle/css/muddle.css
@@ -11,3 +11,13 @@ div.muddle-map-view {
     overflow: scroll;
     max-height: 400px;
 }
+
+.muddle-map-cell {
+    position: relative;
+}
+.muddle-map-player {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
