--- a/Muddle.Web/Views/Shared/_Layout.cshtml
+++ b/Muddle.Web/Views/Shared/_Layout.cshtml
@@ -36,11 +36,11 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Map">Maps</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/MapView">Map Viewer</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/GamesMaster">Games Master</a>
+                            <a class="nav-link" asp-area="" asp-page="/GamesMaster">Example Games</a>
                         </li>
                     </ul>
                 </div>
